--- a/src/events/advent/2022.md
+++ b/src/events/advent/2022.md
@@ -1,14 +1,5 @@
 ---
 title: アドベントカレンダー2022
+year: 2022
+weekend: true
 ---
-
-| 月 | 火 | 水 | 木 | 金 | 土 | 日 |
-|:--|:--|:--|:--|:--|:--|:--|
-|  |  |  | 1 | 2 | 3 | 4 |
-| - | - | - | [近藤(正)](/authors/masahiro-kondo/)<ul><li>[個人開発2022](/blogs/2022/12/01/personal-development-2022/)</li></ul> | [荻原(と)](/authors/toshio-ogiwara/)<ul><li>[CRaCによるJavaの高速化](/blogs/2022/12/02/jdk-crac/)</li></ul> | [iwaki](/authors/shinichiro-iwaki)<ul><li>[Contract TestツールPactの紹介](/blogs/2022/12/03/contract-test-with-pact/)</li></ul> | [庄司](/authors/shigeki-shoji/)<ul><li>[JJUG CCC 2022 Fall](/blogs/2022/12/04/jjug-ccc-2022-fall/)</li></ul> |
-| 5 | 6 | 7 | 8 | 9 | 10 | 11 |
-| [工藤](/authors/noboru-kudo/)<ul><li>[AWSが公開したFinchでコンテナ実行/イメージビルドをする](/blogs/2022/12/05/finch-intro/)</li></ul> | [近藤(正)](/authors/masahiro-kondo/)<ul><li>[VS Codeの CodeQL拡張とStarter workspaceでコード分析する](/blogs/2022/12/06/using-codeql-on-vscode/)</li></ul> | [工藤](/authors/noboru-kudo/)<ul><li>[Tellerでキーストアからシークレット情報取得＆ソースコード埋め込みを検知する](/blogs/2022/12/07/teller-intro/)</li></ul> | [荻原(と)](/authors/toshio-ogiwara/)<ul><li>[基本から理解するJWTとJWT認証の仕組み](/blogs/2022/12/08/jwt-auth/)</li></ul> | [iwaki](/authors/shinichiro-iwaki)<ul><li>[Contract Testの使いどころを考える](/blogs/2022/12/09/contract-test-usecase/)</li></ul> | [荻原(と)](/authors/toshio-ogiwara/)<ul><li>[Auth0 java-jwtを使った素のJWT認証](/blogs/2022/12/10/java-jwt-auth/)</li></ul> | 山岸<ul><li>[AWS Lambda 向け軽量Node.jsミドルウエアエンジン Middy の紹介](/blogs/2022/12/11/middyjs/)</li></ul> |
-| 12| 13 | 14 | 15 | 16 | 17 | 18 |
-| [白谷](/authors/kazuyuki-shiratani)<ul><li>[AWS認定資格を12個すべて取得したので勉強したことなどをまとめます](/blogs/2022/12/12/aws_all_certified/)</li></ul> | [近藤(正)](/authors/masahiro-kondo/)<ul><li>[Wasmer 3.0 の WASM からの各プラットフォーム用バイナリ生成機能を試す](/blogs/2022/12/13/wasmer-v3/)</li></ul> | [中佐藤](/authors/makiko-nakasato/)<ul><li>[大規模アジャイル手法を鳥の目で眺める](/blogs/2022/12/14/scaling-agile-birdview/)</li></ul> | [戸矢](/authors/chiori-toya)<ul><li>[アジャイルちょっとした疑問解消会](/blogs/2022/12/15/agile_solution/)</li></ul> | [近藤(真)](/authors/masafumi-kondo/)<ul><li>[AWS Glueを社内システムに導入した話](/in-house-project/sss/glue/)</li></ul> | [高](/authors/hiroaki-taka/)<ul><li>[新米スクラムマスターの思考メモ（その３ Sprint Planning編）](/blogs/2022/12/17/newcomer-scrum-master-03/)</li></ul> | [工藤](/authors/noboru-kudo/)<ul><li>[Nuxt3で導入されたハイブリッドレンダリングとNuxt版ISG/ISRを試してみる](/blogs/2022/12/18/nuxt3-hybrid-rendering/)</li></ul> |
-| 19 | 20 | 21 | 22 | 23 | 24 | 25 |
-| [河野](/authors/ryosuke-kono/)<ul><li>[AWS上に継続的デリバリ環境を構築してみた 第１回：VPC作成～Apacheインストール](/blogs/2022/12/19/pipeline-gitlab-to-apache-server-01/)</li></ul> | [増田](/authors/yuta-masuda/)<ul><li>[できるだけ簡単に簡単にAWS上に静的サイトを構築する](/blogs/2022/12/20/launch_static_site_using_aws/)</li></ul> | [山岡](/authors/toshio-yamaoka/)<ul><li>[オンライン研修の設計勘所（その２：学びを促進するストーリー展開）](/blogs/2022/12/21/instructional_d-003/)</li></ul> | [宇畑](/authors/masato-ubata/)<ul><li>[API をシナリオベースでテストできる StepCI を試してみた](/blogs/2022/12/22/stepci/)</li></ul> | [中垣内](/authors/ryo-nakagaito/)<ul><li>[S3で疑似的にフォルダを管理する方式の検討と実装](/blogs/2022/12/23/s3-manage-folder/)</li></ul> | [近藤(正)](/authors/masahiro-kondo/)<ul><li>[GitHub Actions - private リポジトリの Action と再利用可能ワークフローが呼び出しが可能に](/blogs/2022/12/24/sharing-private-actions-and-reusable-workflows/)</li></ul> | [荻原(と)](/authors/toshio-ogiwara/)<ul><li>[続・Auth0 java-jwtを使った素のJWT認証 - 公開鍵方式でやってみた](/blogs/2022/12/25/rsa-java-jwt/)</li></ul> |
