--- a/src/posts/blogs/2024/0509_jsr.md
+++ b/src/posts/blogs/2024/0509_jsr.md
@@ -366,7 +366,7 @@ helloBun
 
 無事実行できました。
 
-今回は、ローカルからアップロードする形で公開しましたが、GitHub Actions による公開がサポートされています。
+今回はローカルからアップロードする形で公開しましたが、GitHub Actions による公開がサポートされています。
 
 [Publishing from GitHub Actions | Publishing packages - Docs - JSR](https://jsr.io/docs/publishing-packages#publishing-from-github-actions)
 
