--- a/src/posts/blogs/2024/0509_jsr.md
+++ b/src/posts/blogs/2024/0509_jsr.md
@@ -141,7 +141,7 @@ Node.js の プロジェクトで JSR パッケージを使用する場合、npm
 まず Node.js のプロジェクトを作成します。
 
 ```shell
-mkdir hello-jsr && cd hell-jsr
+mkdir hello-jsr && cd hello-jsr
 npm init --y
 ```
 
