chore: add info about Deno std lib is now available on jsr

--- a/src/posts/blogs/2024/0509_jsr.md
+++ b/src/posts/blogs/2024/0509_jsr.md
@@ -17,6 +17,12 @@ JSR は JavaScript/TypeScript 用のパッケージレジストリです。
 
 [Introducing JSR - the JavaScript Registry](https://deno.com/blog/jsr_open_beta)
 
+:::column:2024.05.15追記
+Deno の標準ライブラリが JSR でホストされるようになりました。
+
+[The Deno Standard Library is now available on JSR](https://deno.com/blog/std-on-jsr)
+:::
+
 Deno 社主体で開発されていますが、Deno、Node.js、Bun などの環境で利用可能です。
 
 JSR が構築された背景として2009年から現在にかけて以下のような変化がありました。
