--- a/src/posts/blogs/2024/1229_deno-2.1-first-class-wasm-support.md
+++ b/src/posts/blogs/2024/1229_deno-2.1-first-class-wasm-support.md
@@ -11,7 +11,7 @@ image: true
 
 [Deno 2.1: Wasm Imports and other enhancements](https://deno.com/blog/v2.1)
 
-従来の Deno では Web 標準の API を使って、Wasm をロード実行可能でしたが、普通のモジュールをインポートするように使用できるようになりました。
+従来の Deno では Web 標準の API を使って、Wasm のロード・実行可能でしたが、2.1以降は通常のモジュール同様、import で使用できるようになりました。
 
 ## Wasm のロードと実行：従来の方法
 以下は、ローカルに配置した add.wasm という WebAssembly をインスタンス化して、公開された関数(add)を使用する例です。
@@ -87,7 +87,7 @@ Deno は Wasm のモジュールに対しても型チェックを行います。
 
 ## Web Worker から使ってみる。
 
-[以前の連載記事](https://developer.mamezou-tech.com/deno/getting-started/05-using-wasm/)では、Web Worker で Wasm のコードを分散実行させる例を紹介していました。当時は Wasm を事前コンパイルしてを Worker に渡し、Worker 側でインスタンス化して実行するという方法を取っていました[^2]。現在は Worker のコードで直接 import できるので楽になりました。
+[以前の連載記事](https://developer.mamezou-tech.com/deno/getting-started/05-using-wasm/)では、Web Worker で Wasm のコードを分散実行させる例を紹介していました。当時は Wasm をメインプロセスで事前コンパイルして Worker に渡し、Worker 側でインスタンス化して実行するという方法を取っていました[^2]。現在は Worker のコードで直接 import できるので楽になりました。
 
 [^2]: ワーカー毎にコンパイルが走るのを止めたかったので。
 
@@ -139,4 +139,4 @@ worker2: 7
 ## さいごに
 以上、Deno のファーストクラス Wasm サポートを軽く試しました。Wasm が Deno のモジュールグラフに取り込まれ、Deno による分析・キャッシュが行われ高速に利用できるようになっているようです。型チェックも有効です。
 
-非常に手軽に利用できるようになって glue code っぽいところもなくなくなっていて良いですね。Wasm を使う障壁がグッと下がった感じです。
+非常に手軽に利用できるようになってグルーコードっぽいところが皆無です。Wasm を使う障壁がグッと下がった感じです。
