--- a/src/posts/blogs/2024/1229_deno-2.1-first-class-wasm-support.md
+++ b/src/posts/blogs/2024/1229_deno-2.1-first-class-wasm-support.md
@@ -11,7 +11,7 @@ image: true
 
 [Deno 2.1: Wasm Imports and other enhancements](https://deno.com/blog/v2.1)
 
-従来の Deno では Web 標準の API を使って、Wasm のロード・実行可能でしたが、2.1以降は通常のモジュール同様、import で使用できるようになりました。
+従来の Deno では Web 標準の API を使って、Wasm のロード・実行が可能でしたが、2.1以降は通常のモジュール同様、import で使用できるようになりました。
 
 ## Wasm のロードと実行：従来の方法
 以下は、ローカルに配置した add.wasm という WebAssembly をインスタンス化して、公開された関数(add)を使用する例です。
